# MultiCol-SLAM

./: CMakeLists.txt  build.sh  run.sh
include/: Wrapper.h  cMapPublisher.h  cMultiFrame.h  cMultiFramePublisher.h  cORBmatcher.h  cSystem.h  g2o_MultiCol_sim3_expmap.h
nokia/: CMakeLists.txt
nokia/src/: convert.cc  ozo.cpp
src/: cMultiFramePublisher.cpp  cORBmatcher.cpp  cOptimizer.cpp  cSystem.cpp  g2o_MultiCol_sim3_expmap.cpp
src/python/: Wrapper.cc
